# Teather

./: .gitignore  Cargo.toml  README.md  compile_err.txt  gen_icon.js  package-lock.json  package.json  project_tracking.md  task.md  todo.md
.claude/: settings.local.json
crates/tether-cfapi/: Cargo.toml
crates/tether-cfapi/src/: filter.rs  lib.rs  placeholder_ops.rs  provider.rs  registry.rs  sync_state.rs
crates/tether-core/: Cargo.toml
crates/tether-core/src/: lib.rs
crates/tether-core/src/api/: auth.rs  data_management.rs  mod.rs  models.rs  storage.rs
crates/tether-core/src/config/: mod.rs  secure_storage.rs  settings.rs
crates/tether-core/src/db/: database.rs  migrations.rs
crates/tether-core/src/sync/: cfapi_provider.rs  change_detector.rs  cloud_poller.rs  conflict.rs  diagnostics.rs  engine.rs  hasher.rs  local_indexer.rs  mod.rs  parity.rs  queue.rs  reference.rs  save_patterns.rs  task.rs  urls.rs  worker.rs
packaging/: Package.appxmanifest  README.md
src/: index.html
src-tauri/: Cargo.toml  appxmanifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs
src/styles/: main.css
tests/: PARITY_TEST_MATRIX.md
