[package]
name = "tether-app"
version.workspace = true
edition.workspace = true

[dependencies]
tether-core = { path = "../crates/tether-core" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opener = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "tether_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
