[package]
name = "tether-core"
version.workspace = true
edition.workspace = true

[dependencies]
tether-cfapi = { path = "../tether-cfapi" }
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + REST
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# OAuth2 PKCE
oauth2 = "5"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File hashing
sha2 = "0.10"

# Filesystem watching
notify = "7"
notify-debouncer-full = "0.4"

# Retry / backoff
backoff = { version = "0.4", features = ["tokio"] }

# Secure credential storage
keyring = "3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# URL-encode APS version IDs in path segments (may contain `?version=`).
urlencoding = "2"
